<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3c3c3c">


    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/new_password"
        android:autofillHints="@string/new_password"
        android:ems="10"
        android:textColor="#FFFF"
        android:textColorHint="#FFFF"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/retypePassword"
        android:autofillHints="@string/retypePassword"
        android:textColor="#FFFF"
        android:textColorHint="#FFFF"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/errorMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="end|center"
        android:textColor="#FF0000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnChangePasswordOnClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#FFFF"
        android:background="#1b1b1b"
        android:text="@string/change_password" />


</LinearLayout>